# PyataDB

./: README.md  _test.py  pyproject.toml  setup.py
PyataDB/: Pyata.py  __init__.py
Pydb/: __init__.py  pydb.py
PynexDB/: Pynex.py  Tools.py  __init__.py  pynex.py
docs/: quick-start.md
examples/: Storing_and_Retrieving.py  quickstart_example.py
pyatabase/: __init__.py  pyata.py
tests/: __init__.py  test.py
tests/company/: Company_Employees.db  employees.py  tui_interface.py
