[project]
name = "PynexDB"
version = "0.1.6"
authors = [
  { name="Exclavia", email="git@exclavia.network" },
]
description = "PynexDB is a lightweight, easy-to-use, and efficient database built entirely in Python"

[build-system]
requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"
