[project]
name = "PynexDB"
version = "2.0.1"
authors = [
  { name="Exclavia", email="git@exclavia.network" },
]
description = "PynexDB is a lightweight, efficient, and easy-to-use, and efficient database built entirely in Python"

[build-system]
requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"


